force-app/main/default/objects/FileTypeConfiguration__mdt/FileTypeConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>File type configuration</label>
    <pluralLabel>File type configurations</pluralLabel>
</CustomObject>