force-app/main/default/objects/FileTypeConfiguration__mdt/fields/AvailableValues__c.field-meta.xml
<CustomField>
    <fullName>AvailableValues__c</fullName>
    <label>Available values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>