force-app/main/default/objects/FileTypeConfiguration__mdt/fields/AvailableValuesForAdmin__c.field-meta.xml
<CustomField>
    <fullName>AvailableValuesForAdmin__c</fullName>
    <label>Available values for admin</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>