force-app/main/default/objects/FileTypeConfiguration__mdt/fields/SetInferredPermissionToFile__c.field-meta.xml
<CustomField>
    <fullName>SetInferredPermissionToFile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the user’s permission is determined by the related record.</inlineHelpText>
    <label>Set inferred permission to file</label>
    <type>Checkbox</type>
</CustomField>