force-app/main/default/objects/FileTypeConfiguration__mdt/fields/SObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SObjectApiName__c</fullName>
    <label>SObject API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>